feat: ejemplo para random forest

--- a/Ejemplos/ejemplos_arboles/Ejemplo de Árbol de regresion con carros.ipynb
+++ b/Ejemplos/ejemplos_arboles/Ejemplo de Árbol de regresion con carros.ipynb
@@ -178,33 +178,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['normalized-losses',\n",
-       " 'make',\n",
-       " 'fuel-type',\n",
-       " 'aspiration',\n",
-       " 'num-of-doors',\n",
-       " 'body-style',\n",
-       " 'drive-wheels',\n",
-       " 'engine-location',\n",
-       " 'engine-type',\n",
-       " 'num-of-cylinders',\n",
-       " 'fuel-system',\n",
-       " 'bore',\n",
-       " 'stroke',\n",
-       " 'horsepower',\n",
-       " 'peak-rpm',\n",
-       " 'price']"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "symboling              int64\n",
+      "normalized-losses     object\n",
+      "make                  object\n",
+      "fuel-type             object\n",
+      "aspiration            object\n",
+      "num-of-doors          object\n",
+      "body-style            object\n",
+      "drive-wheels          object\n",
+      "engine-location       object\n",
+      "wheel-base           float64\n",
+      "length               float64\n",
+      "width                float64\n",
+      "height               float64\n",
+      "curb-weight            int64\n",
+      "engine-type           object\n",
+      "num-of-cylinders      object\n",
+      "engine-size            int64\n",
+      "fuel-system           object\n",
+      "bore                  object\n",
+      "stroke                object\n",
+      "compression-ratio    float64\n",
+      "horsepower            object\n",
+      "peak-rpm              object\n",
+      "highway-mpg            int64\n",
+      "price                 object\n",
+      "dtype: object\n",
+      "['symboling', 'wheel-base', 'length', 'width', 'height', 'curb-weight', 'engine-size', 'compression-ratio', 'highway-mpg']\n",
+      "['normalized-losses', 'make', 'fuel-type', 'aspiration', 'num-of-doors', 'body-style', 'drive-wheels', 'engine-location', 'engine-type', 'num-of-cylinders', 'fuel-system', 'bore', 'stroke', 'horsepower', 'peak-rpm', 'price']\n"
+     ]
     }
    ],
    "source": [
@@ -213,7 +222,10 @@
     "\n",
     "numerical_columns = numerical_columns_selector(carros)\n",
     "categorical_columns = categorical_columns_selector(carros)\n",
-    "categorical_columns"
+    "categorical_columns\n",
+    "print(carros.dtypes)\n",
+    "print(numerical_columns)\n",
+    "print(categorical_columns)"
    ]
   },
   {
@@ -225,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
