feat: ejemplo svr

--- a/Ejemplos/ejemplos_random_forest/regresion_random_forest.ipynb
+++ b/Ejemplos/ejemplos_random_forest/regresion_random_forest.ipynb
@@ -172,9 +172,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 3)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X = datos.iloc[:, 1:-1].values\n",
     "y = datos.iloc[:, -1].values"
@@ -642,7 +653,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "n_estimators = cantidad de árboles"
+    "n_estimators = cantidad de árboles\n",
+    "la cantidad de observaciones es por default para el random forest tomando al azar los datos del dataset pero se puede estimar esa cantidad con un parámetro."
    ]
   },
   {
